crates/vespera_macro/src/schema_macro/from_model/generate/snapshots/vespera_macro__schema_macro__from_model__generate__tests__has_one_required_simple.snap
---
source: crates/vespera_macro/src/schema_macro/from_model/generate.rs
expression: "run_scenario(models, new_type, source_type, rows, relations, module)"
---
impl MemoSchema {
    pub async fn from_model(
        model: Model,
        db: &sea_orm::DatabaseConnection,
    ) -> Result<Self, sea_orm::DbErr> {
        use sea_orm::ModelTrait;
        let user = model.find_related(user::Entity).one(db).await?;
        Ok(Self {
            id: model.id,
            user: Box::new(
                <user::Schema as From<
                    _,
                >>::from(
                    user
                        .ok_or_else(|| sea_orm::DbErr::RecordNotFound(
                            format!("Required relation '{}' not found", stringify!(user)),
                        ))?,
                ),
            ),
        })
    }
}
