crates/vespera_macro/src/schema_macro/from_model/generate/snapshots/vespera_macro__schema_macro__from_model__generate__tests__inline_type_required_belongs_to.snap
---
source: crates/vespera_macro/src/schema_macro/from_model/generate.rs
expression: "run_scenario(models, new_type, source_type, rows, relations, module)"
---
impl MemoSchema {
    pub async fn from_model(
        model: crate::models::memo::Model,
        db: &sea_orm::DatabaseConnection,
    ) -> Result<Self, sea_orm::DbErr> {
        use sea_orm::ModelTrait;
        let user = model.find_related(crate::models::user::Entity).one(db).await?;
        Ok(Self {
            id: model.id,
            user: Box::new({
                let r = user
                    .ok_or_else(|| sea_orm::DbErr::RecordNotFound(
                        format!("Required relation '{}' not found", stringify!(user)),
                    ))?;
                MemoSchema_User {
                    id: r.id,
                    name: r.name,
                }
            }),
        })
    }
}
