crates/vespera_macro/src/schema_macro/from_model/generate/snapshots/vespera_macro__schema_macro__from_model__generate__tests__parent_stub_required_circular.snap
---
source: crates/vespera_macro/src/schema_macro/from_model/generate.rs
expression: "run_scenario(models, new_type, source_type, rows, relations, module)"
---
impl UserSchema {
    pub async fn from_model(
        model: crate::models::user::Model,
        db: &sea_orm::DatabaseConnection,
    ) -> Result<Self, sea_orm::DbErr> {
        use sea_orm::ModelTrait;
        let memos = model.find_related(crate::models::memo::Entity).all(db).await?;
        let __parent_stub__ = Self {
            id: model.id.clone(),
            name: model.name.clone(),
            memos: vec![],
        };
        Ok(Self {
            id: model.id,
            name: model.name,
            memos: memos
                .into_iter()
                .map(|r| crate::models::memo::Schema {
                    id: r.id,
                    title: r.title,
                    user_id: r.user_id,
                    user: Box::new(__parent_stub__.clone()),
                })
                .collect(),
        })
    }
}
