crates/vespera_macro/src/schema_macro/from_model/generate/snapshots/vespera_macro__schema_macro__from_model__generate__tests__relation_field_not_in_mappings.snap
---
source: crates/vespera_macro/src/schema_macro/from_model/generate.rs
expression: "run_scenario(models, new_type, source_type, rows, relations, module)"
---
impl TestSchema {
    pub async fn from_model(
        model: Model,
        db: &sea_orm::DatabaseConnection,
    ) -> Result<Self, sea_orm::DbErr> {
        use sea_orm::ModelTrait;
        let user = model.find_related(user::Entity).one(db).await?;
        Ok(Self {
            id: model.id,
            owner: Default::default(),
        })
    }
}
